# vipex-firelfly-browser

./: Cargo.toml  Dockerfile  docker-compose.yml
src/: main.rs
src/dns/: dns_cache.rs  mod.rs  resolver.rs
src/exceptions/: custom_error.rs
src/models/: scheme.rs
src/url/: url_parser.rs
