[package]
name = "vipex-firefly-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
thiserror = "1.0.69"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "time"] }
async-trait = "0.1.89"
simple_logger = "1.16"
log = "0.4.29"
redis = { version = "0.24", features = ["tokio-comp"] }
dotenvy = "0.15"
serde_json = "1.0.149"

